product_docs/docs/efm/3.10/efm_user/07_using_efm_utility.mdx
---
title: "Using the efm Utility"
---

<div id="using_efm_utility" class="registered_link"></div>

provides the efm utility to assist with cluster management. The RPM installer adds the utility to the `/usr/edb/efm-3.10/bin` directory when you install .

<div id="efm_allow_node" class="registered_link"></div>

`efm allow-node <cluster_name>`

> Invoke the `efm allow-node` command to allow the specified node to join the cluster. When invoking the command, provide the name of the cluster and the IP address of the joining node.
>
> This command must be invoked by efm, a member of the efm group, or root.

<div id="efm_cluster_status" class="registered_link"></div>

`efm cluster-status <cluster_name>`

> Invoke the `efm cluster-status` command to display the status of a cluster. For more information about the3.10 status report, see [Monitoring a Failover Manager Cluster](06_monitoring_efm_cluster/#monitoring_efm_cluster).

<div id="efm_cluster_status-json" class="registered_link"></div>

`efm cluster-status-json <cluster_name>`

> Invoke the `efm cluster-status-json` command to display the status of a cluster in json format. While the format of the displayed information is different than the display generated by the efm cluster-status command, the information source is the same.
>
> The following example is generated by querying the status of a healthy cluster with two nodes:

```text
{
    "nodes": {
        "172.16.144.176": {
            "type": "Witness",
            "agent": "UP",
            "db": "N\/A",
            "vip": "",
            "vip_active": false
        },
        "172.16.144.177": {
            "type": "Master",
            "agent": "UP",
            "db": "UP",
            "vip": "",
            "vip_active  :   false"
            "xlogReceive :   0/14001478"
            "xlog    :   0/14001478"
            "xloginfo    :"
        },
        "172.16.144.180": {
            "type": "Standby",
            "agent": "UP",
            "db": "UP",
            "vip": "",
            "vip_active  :   false"
            "xlogReceive :   0/14001478"
            "xlog    :   0/14001478"
            "xloginfo    :"
        }
    },
    "allowednodes": [
        "172.16.144.177",
        "172.16.144.160",
        "172.16.144.180",
        "172.16.144.176"
    ],
    "membershipcoordinator": "172.16.144.177",
    "failoverpriority": [
        "172.16.144.180"
    ],
    "minimumstandbys": 0,
    "missingnodes": [],
    "messages": []
}
```

<div id="efm_disallow_node" class="registered_link"></div>

`efm disallow-node <cluster_name> <ip_address>`

> Invoke the `efm disallow-node` command to remove the specified node from the allowed hosts list, and prevent the node from joining a cluster. Provide the name of the cluster and the IP address of the node when calling the `efm disallow-node` command. This command must be invoked by efm, a member of the efm group, or root.

<div id="efm_encrypt" class="registered_link"></div>

`efm encrypt <cluster_name> [--from-env]`

> Invoke the `efm encrypt` command to encrypt the database password before include the password in the cluster properties file. Include the `--from-env` option to instruct to use the value specified in the `EFMPASS` environment variable, and execute without user input. For more information, see [Encrypting Your Database Password](04_configuring_efm/01_cluster_properties/01_encrypting_database_password/#encrypting_database_password).

<div id="efm_promote" class="registered_link"></div>

`efm promote cluster_name [-switchover [-sourcenode <address>][-quiet][-noscripts]`

> The `efm promote` command instructs to perform a manual failover of standby to master.
>
> Manual promotion should only be attempted if the status command reports that the cluster includes a Standby node that is up-to-date with the Master. If there is no up-to-date Standby, will prompt you before continuing.
>
> Include the `–switchover` clause to promote a standby node, and reconfigure a master node as a standby node. Include the `-sourcenode` keyword, and specify a node address to indicate the node whose recovery.conf file will be copied to the old master node (making it a standby). Include the `-quiet` keyword to suppress notifications during the switchover process. Include the `-noscripts` keyword to instruct to not invoke fencing or post-promotion scripts.
>
> This command must be invoked by efm, a member of the efm group, or root.
>
> **Please note:** This command instructs the service to ignore the value specified in the auto.failover parameter in the cluster properties file.

<div id="efm_resume" class="registered_link"></div>

`efm resume <cluster_name>`

> Invoke the `efm resume` command to resume monitoring a previously stopped database. This command must be invoked by efm, a member of the efm group, or root.

<div id="efm_set_priority" class="registered_link"></div>

`efm set-priority <cluster_name> <ip_address> <priority>`

> Invoke the `efm set-priority` command to assign a failover priority to a standby node. The value specifies the order in which the new node will be used in the event of a failover. This command must be invoked by efm, a member of the efm group, or root.
>
> *priority* is an integer value of 1 to *n*, where *n* is the number of standby nodes in the list. Specify a value of 1 to indicate that the new node is the primary standby, and will be the first node promoted in the event of a failover. A priority value of 0 instructs to not promote the standby.

<div id="efm_stop_cluster" class="registered_link"></div>

`efm stop-cluster <cluster_name>`

> Invoke the `efm stop-cluster` command to stop on all nodes. This command instructs to connect to each node on the cluster and instruct the existing members to shut down. The command has no effect on running databases, but when the command completes, there is no failover protection in place.
>
> **Please note**: When you invoke the efm stop-cluster command, all authorized node information is removed from the Allowed node host list.
>
> This command must be invoked by efm, a member of the efm group, or root.

<div id="efm_upgrade_conf" class="registered_link"></div>

`efm upgrade-conf <cluster_name> [-source <directory>]`

> Invoke the efm upgrade-conf command to copy the configuration files from an existing installation, and add parameters required by a installation. Provide the name of the previous cluster when invoking the utility. This command must be invoked with root privileges.
>
> If you are upgrading from a configuration that does not use sudo, include the `-source` flag and specify the name of the *directory* in which the configuration files reside when invoking upgrade-conf.

<div id="efm_node_status_json" class="registered_link"></div>

`efm node-status-json <cluster_name>`

> Invoke the `efm node-status-json` command to display the status of a local node in json format. A successful execution of this command returns `0` as its exit code. In case of a database failure or an agent status becoming IDLE, the command returns `1` as exit code.
>
> The following is an example output of the `efm node-status-json` command:
>
> ```text
> {
>   "type":"Standby",
>   "address":"172.16.144.130",
>   "agent":"UP",
>   "db":"UP",
>   "vip":"",
>   "vip_active":"false"
> }
> ```

<div id="efm_help" class="registered_link"></div>

`efm --help`

> Invoke the `efm --help` command to display online help for the Failover Manager utility commands.
